--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h2>Projects</h2>
     <div class="project-list">
       <div class="project">
-        <img src="Images/portfolio.png" alt="project image" width="270px" height="100px">
+        <img src="portfolio.png" alt="project image" width="270px" height="100px">
         <br>
         <br>
         <h3>Portfolio Website</h3>
@@ -49,7 +49,7 @@
       </div>
 
       <div class="project">
-        <img src="Images/to-do banner.png" alt="to-do list" width="270px" height="100px">
+        <img src="to-do banner.png" alt="to-do list" width="270px" height="100px">
         <br>
         <br>
         <h3>To-Do List App</h3>
@@ -58,7 +58,7 @@
       </div>
 
       <div class="project">
-        <img src="Images/product.png" alt="product list" width="270px" height="100px">
+        <img src="product.png" alt="product list" width="270px" height="100px">
       <br>
       <br>
         <h3>Product Listing Page</h3>
